add: token details router
